--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -4,9 +4,9 @@
     - name: Full Name
       value: Albert Einstein
     - name: Date of Birth
-      value: 14th March 1879
+      value: 1993
     - name: Languages
-      value: English, German
+      value: Englis
 
 - title: Education
   type: time_table
