--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ middle_name: Mills
 last_name: Bransby
 email: k.m.bransby@qmul.ac.uk
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
-  PhD researcher in Medical Image Analysis and Deep Learning, at Queen Mary University of London
+  PhD researcher in Machine Learning and Computer Vision with a focus on Cardiac Imaging applications at Queen Mary University of London
 footer_text: >
   Powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio">al-folio</a> theme.
   Hosted by <a href="https://pages.github.com/" target="_blank">GitHub Pages</a>.
